[project]
name = "robotic-simulations"
version = "0.1.0"
description = ""
authors = [
    {name = "annaehhh",email = "97302590+annaehhh@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ir-sim (>=2.9.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
